# secure-data-valuation

./: .gitignore  TODO  environment.yml  environment_nb.yml  mpspdz.md  poseidon.md  poseidon_params.py  readme.md  requirements.txt  requirements_crypten.txt  requirements_ezkl.txt
MP-SPDZ/: test  test.cpp
MP-SPDZ/Compiler/: allocator.py  config.py  floatingpoint.py
blockchain/: readme.md
experiments/: MonteCarloShapley.py  complexity_distance.py  data.py  exp_1_analysis.py  exp_2_analysis.py  experiment_1.py  experiment_2.py  experiment_2_convex.py  experiment_AL.py  models.py  test.py  valuation_alg.py  valuation_alg_convex.py  valuation_template.py
multi-point/: diversity_measure.ipynb  readme.md
notebooks/: input.json  multi_malicious.ipynb  proof.json  public.json  single_malicious.ipynb  single_semihonest.ipynb  verification_key.json  witness.wtns
poseidon_extraction/: Cargo.toml
poseidon_extraction/src/: main.rs
poseidon_extraction/src_python/: chatgpt.py  extract_params.py  main.py  poseidon_extraction.ipynb  poseidon_params.py
single-point/: calibration.json  extract_params.py  input.json  kzg_vis.ipynb  poseidon_extraction.ipynb  poseidon_params.py  readme.md  settings.json  simple_demo_public_input_output.ipynb  val_data.json  witness.json
zkp_circuits/: commit.circom  commit.js  commit.r1cs  commit.sym  cp.circom  cp.r1cs  cp.sym  cp_overall.circom  cp_overall.r1cs  cp_overall.sym  input.json  inputs_gen.py  multiplier2_0000.zkey  multiplier2_0001.zkey  package-lock.json  proof.json  public.json  steps.md  verification_key.json  witness.wtns
(+200 files in other folders)
